--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ part2/phonebook/db.json
 part2/phonebook/.env
 part4/blog-list-app/.env
 part4/blog-list-app/node_modules
+part6/redux-notes-part6-1
+part6/unicafe-redux/.env
